# terminalforandroid

./: debug.sh  gradlew  settings.gradle.kts  wt.html
.github/workflows/: build.yml
app/: build.gradle.kts  debug.keystore  proguard-rules.pro
app/src/androidTest/java/com/sshterminal/: MainActivityUiTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  termux-pty.c
app/src/main/java/com/sshterminal/: LocalTerminalEmulator.kt  LocalTerminalSession.kt  MainActivity.kt  SSHConnectionManager.kt  SshTerminalSession.kt  TabBar.kt  TabContentHost.kt  TerminalBuffer.kt  TerminalEmulator.kt  TerminalSession.kt  TerminalTab.kt  TerminalView.kt  TermuxPty.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/sshterminal/: TerminalBufferTest.kt  TerminalEmulatorTest.kt
